Uploaded image for project: 'Parquet'
  1. Parquet
  2. PARQUET-599

ColumnWriter::RleEncodeLevels' size estimation might be wrong

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • cpp-1.0.0
    • parquet-cpp
    • None

    Description

      The size estimation might be too small. Instead of adding a factor of 2 (which I guess we're off), we should add a call to LevelEncoder that redirects either to RleEncoder::MaxBufferSize or computes the value for the BitPacked encoding.

      Attachments

        Activity

          People

            uwe Uwe Korn
            uwe Uwe Korn
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: