PARQUET-599: Better size estimation for levels

Still not an optimal size estimation but at least we will have always the required amount.

Author: Uwe L. Korn <uwelk@xhochy.com>

Closes #96 from xhochy/parquet-599 and squashes the following commits:

e8044b5 [Uwe L. Korn] PARQUET-599: Better size estimation for levels

Change-Id: I93e2b4d2914b50cf24889bcc0c20d669a49284d6